# TP

./: CMakeLists.txt  README.md  run.sh
A/: preparing.py
B/: CMakeLists.txt
C/: main.cpp
K8S/: balancer1.yaml  balancer2.yaml  deployment2.yaml
TestApp/: start.sh
lib/: Makefile  cmake_install.cmake
